<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources">
    <string name="testpress_courses">Courses</string>
    <string name="testpress_no_courses">No Courses Available</string>
    <string name="testpress_no_courses_description">You can buy courses from the store.</string>
    <string name="testpress_error_loading_courses">Loading courses failed</string>
    <string name="testpress_no_chapter">No Chapter Available</string>
    <string name="testpress_no_chapter_description">This course didn\'t contain any chapter now. Please try after some time.</string>
    <string name="testpress_error_loading_chapters">Loading chapters failed</string>
    <string name="testpress_chapter_not_available">Chapter not available</string>
    <string name="testpress_chapter_not_available_description">Chapter is no longer available or not published yet.</string>
    <string name="testpress_no_content">No Content Available</string>
    <string name="testpress_no_content_description">This chapter didn\'t contain any contents now. Please try after some time.</string>
    <string name="testpress_error_loading_contents">Loading contents failed</string>
    <string name="testpress_content_not_available">Content not available</string>
    <string name="testpress_content_not_available_description">Content is no longer available or not published yet.</string>
    <string name="testpress_leaderboard_not_available">Toppers under progress</string>
    <string name="testpress_leaderboard_not_available_description">We are yet to update the leaderboard list. Check back later!</string>
    <string name="testpress_error_loading_leaderboard">Loading leaderboard failed</string>
    <string name="testpress_error_loading_rank">Loading rank failed</string>
    <string name="testpress_error_loading_target">Loading target failed</string>
    <string name="testpress_error_loading_thread">Loading thread failed</string>
    <string name="testpress_previous_content">Previous</string>
    <string name="testpress_next_content">Next</string>
    <string name="testpress_start_exam_online">Start Exam Online</string>
    <string name="testpress_start">Start</string>
    <string name="testpress_download_attachment">Download Attachment</string>
    <string name="testpress_menu">Menu</string>
    <string name="nothing_here">Nothing Here</string>
    <string name="no_downloads">Looks like you’ve not downloaded any videos as of now.</string>
    <string name="refresh_videos">Please refresh videos</string>
    <string name="refresh_videos_description">Looks like you’ve not refreshed videos for long time. Press refresh to continue.</string>
    <string name="auto_time_disabled">Automatic Date/Time is disabled</string>
    <string name="enable_auto_time_description">Looks like you have disabled automatic date/time. Please go to your mobile date and time settings and enable Auto Date/Time</string>
    <string name="testpress_leaderboard">Leaderboard</string>
    <string name="testpress_targets_or_threads">Targets / Threats</string>
    <string name="testpress_learn">Learn</string>
    <string name="testpress_usb_connected">Disconnect USB!. Your device is connected to PC, Please disconnect the USB data connection to play videos.</string>
    <string name="testpress_disconnect_live_video">Stop screen sharing!. Your device is casted to projector/monitor, Please stop it &amp; retry to play videos.</string>
    <string name="my_course_title">My Courses</string>
    <string name="available_courses_title">Available Courses</string>
    <string name="quality_selector">Choose Quality</string>
    <string name="no_products_available">No Products Available</string>
    <string name="check_again_later">Please check again later</string>
    <string name="buy_now">Buy Now</string>
    <string name="get_it_for_free">Get it for free</string>
    <string name="download">Download</string>
    <string name="download_description">Download Descrition</string>
    <string name="download_start_error">Failed to start download</string>
    <string name="syncing_video">Please wait... We are syncing video</string>
    <string name="no_internet_to_sync_license">Please turn on internet to fetch video license</string>
    <string name="license_error">Error in fetching video license. Please try again</string>
    <string name="license_request_failed">Couldn\'t fetch decryption key. Please try again.\n\n(Code: %1$d, ID: %2$s)</string>
    <string name="testpress_open_bookmark_file">View</string>
    <string name="live_stream_finished">Live Stream Finished</string>
    <string name="waiting_for_live_stream_title">Waiting for the Live Stream</string>
    <string name="waiting_for_live_stream_desc">Hang tight! The live stream will kick off in a few moments.</string>
    <string name="live_stream_concluded_desc">The live stream has come to an end. Stay tuned, we\'ll have the recording ready for you shortly.</string>
    <string name="live_stream_concluded_no_recording_desc">The live stream has ended. See you at the next one!</string>
    <string name="transcoding_message_description">The video is being processed and will be available shortly.</string>
    <string name="video_conference_ended_title">This Video Conference has ended</string>
    <string name="video_conference_ended_description">This live session has ended. See you in the next one!</string>
    <string name="testpress_running_contents">Running</string>
    <string name="no_running_contents">There are no currently available contents for you.</string>
    <string name="testpress_upcoming_contents">Upcoming</string>
    <string name="no_upcoming_contents">There are no upcoming scheduled contents for you..</string>
    <string name="custom_test_permission_error">Permission Denied, You do not have permission to take this exam.</string>
    <string name="custom_test_network_error">Network Error, Please check your internet connection &amp; try again.</string>
    <string name="custom_test_page_not_found_error">Exam is no longer available, Create a new exam</string>
    <string name="custom_test_server_error">Server Error, Unable to start the custom test. Please try again later.</string>
    <string name="custom_test_unknown_error">Something went wrong, Please try again later</string>
    <string name="offline_answers_submitted_message">Your offline answers have been successfully submitted. Swipe down to refresh this page and view your results.</string>
    <string name="offline_answers_no_network_message">Please connect to the internet and refresh this page to submit your answers.</string>
    <string-array name="exo_speed_values">
        <item>0.5</item>
        <item>0.75</item>
        <item>1</item>
        <item>1.2</item>
        <item>1.5</item>
        <item>1.75</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
    </string-array>
    <plurals name="contents_count">
        <item quantity="one">1 Content</item>
        <item quantity="other">%d Contents</item>
    </plurals>
    <plurals name="chapters_count">
        <item quantity="one">1 Chapter</item>
        <item quantity="other">%d Chapters</item>
    </plurals>
    <string name="exoplayer_miscellaneous_error">An unexpected error occurred. Please try again later.\n\n%1$s\n(Code: %2$d, ID: %3$s)</string>
    <string name="exoplayer_input_or_output_error">A network error occurred. Please try again later.\n\n%1$s\n(Code: %2$d, ID: %3$s)</string>
    <string name="exoplayer_content_parsing_error">A content parsing error occurred. Please try again later.\n\n%1$s\n(Code: %2$d, ID: %3$s)</string>
    <string name="exoplayer_decoding_error">A decoding error occurred. Please try again later.\n\n%1$s\n(Code: %2$d, ID: %3$s)</string>
    <string name="exoplayer_audio_track_error">An AudioTrack error occurred. Please try again later.\n\n%1$s\n(Code: %2$d, ID: %3$s)</string>
    <string name="exoplayer_drm_error">A DRM error occurred. Please try again later.\n\n%1$s\n(Code: %2$d, ID: %3$s)</string>
    <string name="testpress_your_answer">Your Answer:</string>
    <string name="testpress_correct_answer">Correct Answer:</string>
    <string name="testpress_explanation">Explanation:</string>
    <string name="testpress_network_error">Network Error</string>
    <string name="testpress_no_internet_try_again">Please check your internet connection &amp; try again.</string>
    <string name="testpress_error_loading_questions">Loading questions failed</string>
    <string name="testpress_some_thing_went_wrong_try_again">Some thing went wrong, please try again later.</string>
    <string name="testpress_error_loading_bookmarks">Loading bookmarks failed</string>
    <string name="testpress_marks_awarded">Marks Awarded:</string>
    <string name="testpress_app_name">Testpress Exam Sdk</string>
    <string name="testpress_subject">Subject:</string>
    <string name="testpress_bookmark_moved">Bookmark moved successfully</string>
    <string name="testpress_bookmark_deleted">Bookmark deleted successfully</string>
    <string name="testpress_undo">Undo</string>
    <string name="testpress_folder_name_not_allowed">Folder name not allowed</string>
    <string name="testpress_please_wait">Please Wait…</string>
    <string name="testpress_loading">Loading…</string>
    <string name="testpress_no_internet_connection">No internet connection</string>
    <string name="testpress_tap_to_retry">Tap to retry</string>
    <string name="testpress_loading_failed">Loading Failed</string>
    <string name="testpress_authentication_failed">Authentication failed</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="content_scheduled">This content is scheduled!</string>
    <string name="testpress_please_login">Please login to see this exams</string>
    <string name="testpress_no_permission">You do not have permission to view this.</string>
    <string name="video_id_locked"> This Video is locked!</string>
    <string name="testpress_views_exhausted">You\'ve exhausted your views limit for this content. Contact your administrator for further information.</string>
    <string name="testpress_ok">OK</string>
    <string name="testpress_cancel">Cancel</string>
    <string name="testpress_filter">Filter</string>
    <string name="testpress_vote_casted">Vote casted successfully!</string>
    <string name="testpress_self_vote_error">You can\'t vote for yourself!</string>
    <string name="testpress_label_fill_required_details">*Please fill required details</string>
    <string name="testpress_yes">Yes</string>
    <string name="testpress_no">No</string>
    <string name="testpress_are_you_sure">Are you sure?</string>
    <string name="testpress_deny">Deny</string>
    <string name="testpress_permission_denied">Permission Denied</string>
    <string name="testpress_permission_denied_message">Without this permission app is unable to do your intended action, Goto app settings -> Permissions -> Enable permission to continue.</string>
    <string name="testpress_go_to_settings">Goto Settings</string>
    <string name="testpress_action_cant_done_without_permission">Action can\'t be done without permission</string>
    <string name="last_used">Last Used</string>
    <string name="ip_address">IP Address</string>
    <string name="logout_devices">Logout Devices</string>
    <string name="max_login_limit_exceeded_error">Your account has been locked as it has exceeded maximum devices it can be used.</string>
    <string name="account_unlock_info">Your account will automatically get unlocked within </string>
    <string name="no_devices_found">No devices found</string>
    <string name="session_cleared_message">Your session has been cleared. Please log out and login again.</string>
    <string name="testpress_page_correct">Correct</string>
    <string name="testpress_score">Score</string>
    <string name="testpress_date">Date</string>
    <string name="testpress_action">Action</string>
</resources>