<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/main_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/testpress_toolbar" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:background="#ffffff" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    tools:ignore="ScrollViewSize">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:text="Lorem ipsum dolor sit amet, consectetur"
                        android:gravity="center"
                        android:lineSpacingExtra="6dp"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/testpress_black"
                        android:layout_marginBottom="25dp"
                        android:layout_height="wrap_content"/>

                    <View
                        android:id="@+id/title_separator"
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:background="#c0c0c0"/>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/exam_content_layout"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <include
                            android:visibility="gone"
                            android:id="@+id/exam_details_layout"
                            layout="@layout/testpress_exam_details_layout" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/attempt_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <WebView
                        android:visibility="gone"
                        android:id="@+id/web_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/attachment_content_layout"
                        android:padding="20dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/attachment_description"
                            android:textColor="@color/testpress_text_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="3dp"
                            android:text="Content description goes here"/>

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/download_attachment"
                            style="@style/TestpressSmallButton"
                            android:text="@string/testpress_download_attachment" />

                    </LinearLayout>

                    <!-- Empty layout to keep the navigation button in bottom -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="0dp"/>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/start_exam"
                        android:background="@drawable/testpress_green_curved_edge_background"
                        android:text="@string/testpress_start"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#efefef"/>

                    <LinearLayout
                        android:id="@+id/button_layout"
                        android:orientation="horizontal"
                        tools:ignore="UnusedAttribute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/previous"
                            android:background="@android:color/transparent"
                            android:text="@string/testpress_previous_content"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/testpress_text_gray"
                            android:drawableTint="@color/testpress_text_gray"
                            android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp" />

                        <TextView
                            android:id="@+id/page_number"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="15/20"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:lineSpacingExtra="6dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/testpress_text_gray_light"
                            android:layout_height="wrap_content"/>

                        <Button
                            android:id="@+id/next"
                            android:background="@android:color/transparent"
                            android:text="@string/testpress_next_content"
                            android:gravity="right|center_vertical"
                            android:textSize="14sp"
                            android:textColor="@color/testpress_text_gray"
                            android:drawableTint="@color/testpress_text_gray"
                            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </android.support.v4.widget.SwipeRefreshLayout>

        <include layout="@layout/testpress_empty_view" />

    </LinearLayout>
</merge>